--- a/docs/style.css
+++ b/docs/style.css
@@ -1,74 +1,61 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-body {
-	font-family: Open Sans;
-	text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+body, input {
+  font-family: Montserrat;
+  text-align: center;
 }
+
 h1 {
-	text-align: center;
-	color: #AD6C88;
-}
-.split {
-	width: 80%;
-	margin-left: 10%;
+  text-align: center;
+  color: #5192CA;
 }
 
-input, button {
-	padding: 10px;
+i {
+  font-size: 0.875rem;
+}
+
+input, button, select {
+  padding: 5px;
+  border-radius: 3px;
+  border: 1px solid #B1B1B1;
+  background: none;
+}
+
+select {
+  height: 26px;
 }
 
 button {
-	padding: 10px 20px;
-	background: #AD6C88;
-	color: white;
-	border: none;
-	text-transform: uppercase;
+  padding: 10px 20px;
+  background: #5192CA;
+  color: white;
+  border: none;
+  text-transform: uppercase;
 }
 
 button:hover {
-	background: #A58B96;
-	transition: 200ms ease-in-out;
-}
-button:focus, input:focus {
-	outline: none;
+opacity: 0.9;
+  transition: 200ms ease-in-out;
 }
 
-.addPerson {
-	margin-top: 10px;
+button:focus, input:focus, select:focus {
+  outline: none;
 }
 
 .padding-top {
-	margin-top: 20px;
+  margin-top: 8px;
 }
 
-.calculate {
-	width: 120px;
+.light-spacing {
+  margin: 2px;
 }
 
-.section {
-	clear: both;
-}
-
-.remove{
-	width: 14px;
-	margin-left: 5px;
-}
-
-.result {
-	text-align: center;
+#calculate-button {
+  margin-top: 10px;
+  width: 180px;
 }
 
 .display-none {
-	display: none;
-}
-
-.margin-left {
-	margin-left: 4px;
-}
-
-
-@media (max-width: 388px) {
-	.margin-left {
-		margin-left: 0px;
-	}
+  display: none;
 }
