additional expenses wip

--- a/docs/style.css
+++ b/docs/style.css
@@ -32,13 +32,17 @@ select {
 }
 
 select {
-  height: 26px;
+  height: 28px;
 }
 
-.individualTotalRow {
+.fieldInputRow {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.additionalExpensesSection {
+  margin-left: 164px;
 }
 
 /* buttons */
@@ -65,12 +69,12 @@ button:hover {
 
 .additionalExpenseButton {
   margin-left: 4px;
-  height: 18px;
-  width: 20px;
+  height: 10px;
+  width: 10px;
+  color: white;
   justify-content: center;
   align-items: center;
   display: flex;
-  /* line-height: 20px; */
 }
 
 button:focus,
