--- a/css/style.css
+++ b/css/style.css
@@ -8,37 +8,20 @@ select {
   color: #46576b;
 }
 
+h1 {
+  font-size: 40px !important;
+}
+
 h3 {
   margin-bottom: 4px;
   color: #738794;
-}
-
-i {
-  font-size: 0.875rem;
+  font-size: 20px !important;
+  font-weight: 600;
 }
 
 b,
 u {
   color: #748f99;
-}
-
-input,
-button,
-select {
-  padding: 5px;
-  border-radius: 3px;
-  border: 1px solid #c4d4e0;
-  background: none;
-}
-
-select {
-  height: 28px;
-}
-
-.fieldInputRow {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 /* buttons */
@@ -56,16 +39,10 @@ button:hover {
   cursor: pointer;
 }
 
-.tipPreferencesButton,
 .additionalExpenseButton,
-.removeExpenseButton {
-  background: #a5c0cc;
+.removeExpenseButton { 
   padding: 10px;
   border-radius: 20px;
-}
-
-.additionalExpenseButton,
-.removeExpenseButton {
   margin-left: 4px;
   height: 10px;
   width: 10px;
@@ -74,29 +51,16 @@ button:hover {
   display: flex;
 }
 
+.additionalExpenseButton {
+  background-color: #a5c0cc !important;
+}
+
 .removeExpenseButton {
   background-color: #d1626c;
-}
-
-button:focus,
-input:focus,
-select:focus {
-  outline: none;
-}
-
-.padding-top {
-  margin-top: 8px;
-}
-
-.light-spacing {
-  margin: 2px;
 }
 
 #calculate-button {
   margin-top: 10px;
   width: 180px;
-}
-
-.grayText {
-  color: #7e8e8e;
+  background-color: #46576b !important;
 }
